# llvm-passes

./: CMakeLists.txt  README.md
examples/: dce_input.ll  func_calls_input.ll  obfuscat_add_input.ll  obfuscat_add_out.ll  obfuscat_sub_input.ll  obfuscat_sub_out.ll
include/: ArithmeticObfuscators.h  DeadCodeElimination.h  DynamicCallCounter.h  InstrumentFuncCall.h  OpcodeCounter.h  StaticCallCounter.h
inputs/: dce_input.c  obfuscat_add_input.c  obfuscat_sub_input.c
lib/: ArithmeticObfuscators.cpp  CMakeLists.txt  DeadCodeElimination.cpp  DynamicCallCounter.cpp  InstrumentFuncCall.cpp  OpcodeCounter.cpp  StaticCallCounter.cpp
tools/: CMakeLists.txt  DCEMain.cpp  StaticCallCountMain.cpp
